#925398 by ptrl: Fixed Overlay title jumps when active

--- a/modules/overlay/overlay-child.css
+++ b/modules/overlay/overlay-child.css
@@ -68,11 +68,6 @@ html.js body {
   position: absolute;
   width: 26px;
 }
-#overlay-title:active,
-#overlay-close:hover,
-#overlay-close:focus {
-  padding: 0;
-}
 
 /**
  * Tabs on the overlay.
